--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -190,6 +190,31 @@
             </div>
         </div>
 
+        <div class="block">
+            <h4>January 24</h4>
+            <div class="cities">
+                <div class="city" id="Amiens"><span>Amiens</span></div>
+            </div>
+        </div>
+
+        <div class="block">
+            <h4>February 24</h4>
+            <div class="cities">
+                <div class="city" id="Amiens"><span>Amiens</span></div>
+                <div class="city" id="Strasbourg"><span>Strasbourg</span></div>
+                <div class="city" id="Paris"><span>Paris</span></div>
+                <div class="city" id="Bilbao"><span>Bilbao</span></div>
+            </div>
+        </div>
+
+        <div class="block">
+            <h4>March 24</h4>
+            <div class="cities">
+                <div class="city" id="Amiens"><span>Amiens</span></div>
+                <div class="city" id="Cambrai"><span>Cambrai</span></div>
+            </div>
+        </div>
+
 
     </div>
 
