--- a/new-pablo/index.html
+++ b/new-pablo/index.html
@@ -32,10 +32,10 @@
         <!------------ 🌏 INFO ------------>
 
         <div id="infoPanel"
-             class="h-[calc(50vh-2rem)] overflow-hidden md:overflow-scroll scrollbar-hide md:w-1/2 mt-4 md:mt-0 md:pr-6 relative transition-all"
+             class="h-[calc(50vh-2rem)] overflow-hidden md:overflow-scroll scrollbar-hide md:w-full md:min-w-[50%] mt-4 md:mt-0 md:pr-6 relative transition-all"
              data-state="close">
 
-            <div class="bg-special-white z-50 flex justify-between items-center">
+            <div class="bg-special-white z-50 flex justify-between items-center sticky top-0">
                 <h1 class="text-2xl inline">🌀 Pablo Moreno is a <span id="isWhat">...</span></h1>
                 <div>
                     <span class="ml-1 text-xs opacity-30 underline cursor-pointer hover:no-underline">cv</span>
@@ -44,62 +44,66 @@
                 </div>
             </div>
 
-            <p class="my-2 text-lg"><span class="font-bold"></span>... happy young designer finishing his studies in
-                graphic design. Grown in
-                Bilbao he
-                lives in
-                France where he loves create, early mornings and many more things. He's putting a lot of energy on
-                making websites for people, for things or for fun.</p>
-            <p class="text-lg">What is he doing in his daily life?</p>
-            <div class="bg-stone-200 p-2 my-2 rounded-lg">
-                <h4 class="inline">Student in a UX/UI Double Master</h4>
-                <p class="opacity-50">
-                    Moving between the <a href="https://esad-amiens.design/fr/design-numerique/dnsep"
-                       class="underline cursor-pointer hover:no-underline">ésad</a> of Amiens and the <a
-                       href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/"
-                       class="underline cursor-pointer hover:no-underline">UTC</a> of Compiègne </p>
-            </div>
+            <div id="infoText">
+                <p class="my-2 text-lg"><span class="font-bold"></span>... happy young designer finishing his studies in
+                    graphic design. Grown in
+                    Bilbao he
+                    lives in
+                    France where he loves create, early mornings and many more things. He's putting a lot of energy on
+                    making websites for people, for things or for fun.</p>
+                <p class="text-lg">What is he doing in his daily life?</p>
+                <div class="bg-stone-200 p-2 my-2 rounded-lg">
+                    <h4 class="inline">Student in a UX/UI Double Master</h4>
+                    <p class="opacity-50">
+                        Moving between the <a href="https://esad-amiens.design/fr/design-numerique/dnsep"
+                           class="underline cursor-pointer hover:no-underline">ésad</a> of Amiens and the <a
+                           href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/"
+                           class="underline cursor-pointer hover:no-underline">UTC</a> of Compiègne </p>
+                </div>
 
-            <div class="bg-stone-200 p-2 my-2 rounded-lg">
-                <h4 class="inline">Student job at MCA</h4>
-                <p class="opacity-50">The <a href="https://maps.app.goo.gl/6nhrgyCSwHABf6jk9"
-                       class="underline cursor-pointer hover:no-underline">Maison de la Culture
-                        d'Amiens</a> is a big cultural place of the city. In this amusing job I greet spectators and
-                    assist them during the shows. I also
-                    sell tickets for the MCA theater which, through its name, pays homage to Orson Welles.</p>
-            </div>
+                <div class="bg-stone-200 p-2 my-2 rounded-lg">
+                    <h4 class="inline">Student job at MCA</h4>
+                    <p class="opacity-50">The <a href="https://maps.app.goo.gl/6nhrgyCSwHABf6jk9"
+                           class="underline cursor-pointer hover:no-underline">Maison de la Culture
+                            d'Amiens</a> is a big cultural place of the city. In this amusing job I greet spectators and
+                        assist them during the shows. I also
+                        sell tickets for the MCA theater which, through its name, pays homage to Orson Welles.</p>
+                </div>
 
-            <div class="bg-stone-200 p-2 my-2 rounded-lg">
-                <h4 class="inline">Volunteer at AFEV</h4>
-                <p class="opacity-50">This <a href="https://afev.org/hauts-france/amiens"
-                       class="underline cursor-pointer hover:no-underline">association</a> fights
-                    against educational inequalities. I give some time of my week to stay with two kids and doing cool
-                    things :)
+                <div class="bg-stone-200 p-2 my-2 rounded-lg">
+                    <h4 class="inline">Volunteer at AFEV</h4>
+                    <p class="opacity-50">This <a href="https://afev.org/hauts-france/amiens"
+                           class="underline cursor-pointer hover:no-underline">association</a> fights
+                        against educational inequalities. I give some time of my week to stay with two kids and doing
+                        cool
+                        things :)
+                    </p>
+                </div>
+
+                <p class="my-2 text-base">Trough the years the design of this website has changed. You are seeing the
+                    <select class="archive-selector py-1 px-2 rounded-md">
+                        <option data-url="index.html" selected="">last</option>
+                        <option data-url="web-archive/v8-under-plus/frame.html">v.8 (under+)</option>
+                        <option data-url="web-archive/v7-under/frame.html">v.7 (under)</option>
+                        <option data-url="web-archive/v6-23/frame.html">v.6 (23%)</option>
+                        <option data-url="web-archive/v5-threecolors/frame.html">v.5 (threecolors)</option>
+                        <option data-url="web-archive/v4-dark/frame.html">v.4 (dark)</option>
+                        <option data-url="web-archive/v3-sidelist/frame.html">v.3 (sidelist)</option>
+                        <option data-url="web-archive/v2-billboard2/frame.html">v.2 (billboard2)</option>
+                        <option data-url="web-archive/v1-billboard/frame.html">v.1 (billboard)</option>
+                    </select>
+                    version.
                 </p>
+
+                <button id="seeMore"
+                        class="absolute bottom-2 text-black left-1/2 -translate-x-1/2 z-20 underline cursor-pointer hover:no-underline opacity-60 mt-4 md:hidden">see
+                    more</button>
+
+                <div id="fog"
+                     class="w-full h-[80px] bg-gradient-to-t from-special-white to-transparent sticky bottom-0 z-10">
+                </div>
             </div>
 
-            <p class="my-2 text-base">Trough the years the design of this website has changed. You are seeing the
-                <select class="archive-selector py-1 px-2 rounded-md">
-                    <option data-url="index.html" selected="">last</option>
-                    <option data-url="web-archive/v8-under-plus/frame.html">v.8 (under+)</option>
-                    <option data-url="web-archive/v7-under/frame.html">v.7 (under)</option>
-                    <option data-url="web-archive/v6-23/frame.html">v.6 (23%)</option>
-                    <option data-url="web-archive/v5-threecolors/frame.html">v.5 (threecolors)</option>
-                    <option data-url="web-archive/v4-dark/frame.html">v.4 (dark)</option>
-                    <option data-url="web-archive/v3-sidelist/frame.html">v.3 (sidelist)</option>
-                    <option data-url="web-archive/v2-billboard2/frame.html">v.2 (billboard2)</option>
-                    <option data-url="web-archive/v1-billboard/frame.html">v.1 (billboard)</option>
-                </select>
-                version.
-            </p>
-
-            <button id="seeMore"
-                    class="absolute bottom-2 text-black left-1/2 -translate-x-1/2 z-20 underline cursor-pointer hover:no-underline opacity-60 mt-4 md:hidden">see
-                more</button>
-
-            <div id="fog"
-                 class="w-full h-[80px] bg-gradient-to-t from-special-white to-transparent sticky bottom-0 z-10">
-            </div>
         </div>
 
         <!------------ 🎥 VIDEOS ------------>
@@ -131,9 +135,9 @@
     <div id="worksPanel" class="h-fit m-6 mt-0 p-4 md:gap-4 md:gap-y-6 bg-special-white border rounded-3xl">
 
         <!------------ PROJECTS ------------>
-        <div class="projects">
+        <div id="projects">
 
-            <div id="project-3w4eu" class="hidden gap-4 pb-4 mb-4 border-b ">
+            <!-- <div id="project-3w4eu" class="hidden gap-4 pb-4 mb-4 border-b">
                 <div class="w-3/5">
                     <h2 class="text-2xl">3 Words for Europe</h2>
                     <p>Same three words in every european language</p>
@@ -143,72 +147,13 @@
                 <div class="flex flex-col gap-2">
                     <img src="media/thumbnails/3-words-for-eu.png" alt="" class="w-full rounded-lg">
                 </div>
-            </div>
+            </div> -->
 
-            <div id="project-aa22" class="hidden gap-4 pb-4 mb-4 border-b ">
-                <div class="w-3/5">
-                    <h2 class="text-2xl">Andrea Aguiler</h2>
-                    <p>Same three words in every european language</p>
-                    <span class="cursor-pointer opacity-50 underline hover:no-underline"
-                          onclick="hideProjects(this)" data-project="aa22">close</span>
-                </div>
-                <div class="flex flex-col gap-2">
-                    <img src="media/thumbnails/andrea-aguilera.jpg" alt="" class="w-full rounded-lg">
-                </div>
-            </div>
-
-            <div id="project-cn24" class="hidden gap-4 pb-4 mb-4 border-b ">
-                <div class="w-3/5">
-                    <h2 class="text-2xl">Collaborative Narratives</h2>
-                    <p>Same three words in every european language</p>
-                    <span class="cursor-pointer opacity-50 underline hover:no-underline"
-                          onclick="hideProjects(this)" data-project="cn24">close</span>
-                </div>
-                <div class="flex flex-col gap-2">
-                    <img src="media/thumbnails/collaborative-narratives.png" alt="" class="w-full rounded-lg">
-                </div>
-            </div>
-
-            <div id="project-cd23" class="hidden gap-4 pb-4 mb-4 border-b ">
-                <div class="w-3/5">
-                    <h2 class="text-2xl">Copa Decantadora 3d spot</h2>
-                    <p>Same three words in every european language</p>
-                    <span class="cursor-pointer opacity-50 underline hover:no-underline"
-                          onclick="hideProjects(this)" data-project="cd23">close</span>
-                </div>
-                <div class="flex flex-col gap-2">
-                    <img src="media/thumbnails/copa-decantadora.png" alt="" class="w-full rounded-lg">
-                </div>
-            </div>
         </div>
 
 
         <!------------ THUMBNAILS ------------>
-        <div class="minis grid gap-4 gap-y-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-
-            <div id="mini-3w4eu" class="cursor-pointer hover:opacity-50 transition" onclick="showProject(this)"
-                 data-project="3w4eu">
-                <img src="media/thumbnails/3-words-for-eu.png" alt="" class="w-full rounded-lg">
-                <h3 class="mt-1">3 Words for Europe</h3>
-                <p class="opacity-50">Same three words in every european language</p>
-            </div>
-
-            <div id="mini-aa22" class="cursor-pointer hover:opacity-50" onclick="showProject(this)" data-project="aa22">
-                <img src="media/thumbnails/andrea-aguilera.jpg" alt="" class="w-full rounded-lg">
-                <h3 class="mt-1">Andrea Aguilera website</h3>
-                <p class="opacity-50">Same three words in every european language</p>
-            </div>
-            <div id="mini-cn24" class="cursor-pointer hover:opacity-50" onclick="showProject(this)" data-project="cn24">
-                <img src="media/thumbnails/collaborative-narratives.png" alt="" class="w-full rounded-lg">
-                <h3 class="mt-1">Collaborative Narratives</h3>
-                <p class="opacity-50">Same three words in every european language</p>
-            </div>
-            <div id="mini-cd23" class="cursor-pointer hover:opacity-50" onclick="showProject(this)" data-project="cd23">
-                <img src="media/thumbnails/copa-decantadora.png" alt="" class="w-full rounded-lg">
-                <h3 class="mt-1">Copa Decantadora 3d spot</h3>
-                <p class="opacity-50">Same three words in every european language</p>
-            </div>
-
+        <div id="thumbnails" class="grid gap-4 gap-y-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
 
         </div>
 
@@ -217,6 +162,7 @@
 
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/import.js"></script>
 
 </body>
 
