--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                           id="isWhat">...</span></h1>
 
                 <div class="mt-2 text-sm md:mt-0">
-                    <a href="downloads/CV-PABLO-MORENO.pdf"
+                    <a href="downloads/PMORENO-CV.pdf"
                        class="ml-1 underline opacity-30 cursor-pointer hover:no-underline hover:cursor-ne-resize"
                        target="_blank">CV</a>
 
