--- a/familia/index.html
+++ b/familia/index.html
@@ -12,21 +12,29 @@
 <body>
 
     <div class="content">
-        <h1><span id="frase1">Un día como hoy...</span><span id="frase2">en la Familia MORENO</span></h1>
+        <h1>Un día como hoy...</h1>
 
         <div class="postal">
-            <img src="media/photo_5776106370712582438_c.jpg"
-                 alt="Selfie tomado por Pablo, en frente del Fnac de la plaza Cataluña, Barcelona.Se le vé mirando a la pantalla de su modelo de iphone preferido, concentrado pero tranquilo, con la gorra
-                 de camuflaje pixeleado que le dejó Isai pero que perdío en una visita a París.">
-            <div class="info">
-                <span id="fecha">20 de abril 2022</span>
-                <p id="descripción">Selfie tomado por Pablo, en frente del Fnac de la plaza Cataluña, Barcelona.</p>
-            </div>
+            <img id="imagen" src=""
+                 alt="">
+            <p id="descripción">Y</p>
+            <span id="fecha">X</span>
         </div>
 
         <div class="botones">
-            <button class="calendario">calendario</button>
-            <button class="descargar">descargar</button>
+            <div class="texto">
+                <p>Sé que en nuestra familia es important saber el día en el que sucedió algo especial, es
+                    por
+                    ello que se ha
+                    ocurrido hacer este efemérides con fotos de estos eventos que nos han ocurrido. Os
+                    dejo consultarlo cuando queraís, y <a href="pab.energy">añadir</a> fotos a los días que están
+                    vacios.</p>
+                <br>
+                <small>Pablo, por el cumpleaños de Juan en 2024 &#60;3</small>
+            </div>
+            <div class="info">
+                Info
+            </div>
         </div>
 
     </div>
