--- a/familia/index.html
+++ b/familia/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <div class="content">
-        <h1>Un día como hoy...</h1>
+        <a href="" id="titulo">
+            <h1>Un día como hoy...</h1>
+        </a>
 
         <div class="postal">
             <img id="imagen" src=""
