--- a/familia/index.html
+++ b/familia/index.html
@@ -30,7 +30,7 @@
                     ello que se ha
                     ocurrido hacer este efemérides con fotos de estos eventos que nos han ocurrido. Os
                     dejo consultarlo cuando queraís, y <a
-                       href="https://docs.google.com/spreadsheets/d/1Bxgad2KTmIGuQ9Hnh9ma9NZ3QUEJw7DIcwwuvNxGe5g/edit?usp=sharing">añadir</a>
+                       href="instrucciones.html">añadir</a>
                     fotos a los días que están
                     vacios.</p>
                 <br>
