--- a/familia/instrucciones.html
+++ b/familia/instrucciones.html
@@ -18,20 +18,42 @@
 
         <div class="instrucciones">
 
-            <p>Para añadir un nuevo recuerdo es muy fácil, se hace en dos etapas: </p>
+            <p>Añadir un nuevo recuerdo se hace en dos etapas: </p>
             <ul>
-                <li>Subir la foto deseada a la carpeta de <b>Dropbox</b>.</li>
-                <li>Añadir el año, la descripción y el enlace de la foto al tablero <b>Excel</b>.</li>
+                <li>Subir la foto deseada a la carpeta de <a
+                       href="https://www.dropbox.com/scl/fo/goqatftx9597j0hge7b0a/ALnKKj3zzBMYb7WKqPJPRmM?rlkey=8vy9kzbf2ns7u2nye87nwrv2q&st=8zt1fqyp&dl=0"
+                       target="_blank">Dropbox</a>.</li>
+                <li>Añadir el año, la descripción y el enlace de la foto al <a
+                       href="https://docs.google.com/spreadsheets/d/1Bxgad2KTmIGuQ9Hnh9ma9NZ3QUEJw7DIcwwuvNxGe5g/edit?usp=sharing"
+                       target="_blank">tablero</a>.</li>
             </ul>
 
 
             <h3>1. Dropbox</h3>
+            <ul>
+                <li>Instalar servicio "escalar"</li>
+                <li>Escalar la foto en el Finder</li>
+                <li>Renombrarla tipo "1209" (mes+dia)</li>
+                <li>Subir la foto a la carpeta de Dropbox</li>
+                <li>Copiar el enlace directo a la imágen</li>
+            </ul>
 
-            - Para optimizar la imagen vamos a escalarla gracias a esta app.
+            <h4>Instalar servicio "escalar"</h4>
 
-            <a target="_blank" href='assets/Escalar imagen a 1600px.zip'>'Escalar imagen a 1600px'</a>
+            <p>Antes de subir las fotos a Dropbox estaría bien reducirlas un poco de talla, para que no pesen muchos
+                megas. Para ello he creado un pequeño <i>servicio</i> que
+                se integra al Finder, y
+                que permite
+                escalar una foto en un click. </p>
 
-            <img src="assets/screenshot.png" alt="">
+            <p>Para ello descarga y descomprime este archivo .zip: <a target="_blank"
+                   href='assets/Escalar imagen a 1600px.zip'>"Escalar imagen a 1600px"</a>. Una vez descomprimido
+
+            </p>
+
+
+
+            <img src="assets/screenshot.png" alt="" style="height: 200px;">
 
 
             <h3>2. Tablero</h3>
