--- a/index.html
+++ b/index.html
@@ -37,152 +37,151 @@
 
         <!------------ 🌏 INFO ------------>
         <div id="infoPanel"
-             class="flex overflow-scroll relative flex-col justify-between p-4 h-full transition-all md:h-screen md:w-1/2 scrollbar-hide">
+             class="flex overflow-scroll relative flex-col justify-between p-4 pb-0 h-full transition-all duration-500 md:h-screen md:w-1/2">
 
             <!------------ HEADER ------------>
 
             <div>
-                <div class="box-content flex relative z-50 flex-col justify-between md:items-center md:flex-row">
-                    <h1 class="inline text-xl"><a href="" class="transition-all hover:opacity-50 hover:rotate-45">🌀</a>
-                        Pablo Moreno is a <span
-                              id="isWhat">happy young designer</span></h1>
+                <div class="box-content flex relative z-50 flex-col justify-between mb-2 md:items-center md:flex-row">
+                    <h1 class="inline text-xl">
+                        Pablo
+                        Moreno is
+                        a
+                        <span
+                              id="isWhat">happy young designer</span>
+                    </h1>
                 </div>
 
                 <!------------ MORE INFO ------------>
 
                 <div id="infoText" class="max-w-xl text-base">
-                    <div>
-                        <p class="my-2">Inventive in all
+                    <div class="relative">
+
+                        <p class="mb-2">Inventive in all
                             ways, I was raised in Spain, moved to France for studying arts and I'm wainting to
                             relocate in Rotterdam next september! I'm putting a lot of
                             energy on making websites for people, for things or for fun.
                         </p>
 
                         <p class="my-2">You can
-                            <button id="seeMore"
-                                    class="text-[blue] cursor-pointer hover:underline">read
-                                more</button> if <span id="noCurious">you are curious :)</span>
+                            <a id="seeMore"
+                               class="">read
+                                more</a> if <span id="noCurious">you are curious :)</span>
                         </p>
                     </div>
 
                     <div id="moreInfo"
-                         class="hidden opacity-0 transition-all"
+                         class="hidden pb-8 opacity-0 transition-all"
                          data-state="close">
-                        <p class="my-2">In my daily life in <a
+                        <span class="mt-2 font-bold">Daily life</span>
+                        <p class="mb-2">In my daily life in <a
                                href="https://maps.app.goo.gl/6ntymCLiUkz1Bkdo6"
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank">Amiens</a> I'm
+                               class="" target="_blank">Amiens</a> I'm
                             finishing my double
                             master in UX+UI between the <a
                                href="https://esad-amiens.design/fr/design-numerique/dnsep"
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank">ÉSAD</a> and the <a
+                               class="" target="_blank">ÉSAD</a> and the <a
                                href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/"
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank">UTC</a>. I also do a
+                               class="" target="_blank">UTC</a>. I also do a
                             student job welcoming people at the <a href="https://maps.app.goo.gl/6nhrgyCSwHABf6jk9"
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank">Maison de la Culture
+                               class="" target="_blank">Maison de la Culture
                                 d'Amiens</a> who's a big cultural place in the city. On the weekends I spend some
                             time with two kids for an <a href="https://afev.org/hauts-france/amiens"
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank">association</a> who
+                               class="" target="_blank">association</a> who
                             fights
                             against educational inequalities.
                         </p>
-                        <p class="mt-2">
+                        <span class="mt-2 font-bold">Tools</span>
+                        <p class="mb-2">
                             Since my childhood I liked computers so I know HTML, CSS,
                             Javascript, Kirby and Indexhibit CMS, Stripe, VSCodium,
                             Figma, Blender, and the Abode suite... you can see all these things at <a
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                               class="" target="_blank"
                                href='https://pablo.energy/digital-stuff'>my
                                 digital stuff</a>. I recently made a video-tutorial
-                            showing the simplest way I found <a class="text-[blue] cursor-pointer hover:underline"
+                            showing the simplest way I found <a class=""
                                target="_blank" href='https://youtu.be/qUKxkIZCRuI'>to put websites
                                 online</a> and update them quickly, like I'm doing now.</p>
-                        <p class="mt-4">I like to work with friends, and develop ideas together. These
+                        <span class="mt-2 font-bold">People</span>
+                        <p class="mb-2">I like to work with friends, and develop ideas together. These
                             people
                             can be from my school,
-                            like <a class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                            like <a class="" target="_blank"
                                href='https://www.samdroual.fr/'>Sam</a> or
-                            <a class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                            <a class="" target="_blank"
                                href='https://www.leo.doctor/'>Léo</a>, or far
-                            from me, like <a class="text-[blue] cursor-pointer hover:underline"
+                            from me, like <a class=""
                                target="_blank" href='https://collaborative-narratives.online/'>Tim</a> or <a
-                               class="text-[blue] cursor-pointer hover:underline"
+                               class=""
                                target="_blank" href='https://www.instagram.com/angieblingmaker'>Angèle</a> (for whom I'm
                             making a portfolio/shop website). I also
                             made
                             friends in
                             Rotterdam at
                             <a
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                               class="" target="_blank"
                                href='https://extrapractice.space/'>Extra Practice</a>, where I meet designers who
                             inspire me like <a
-                               class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                               class="" target="_blank"
                                href='https://elliott.computer/'>Elliott</a> or
-                            <a class="text-[blue] cursor-pointer hover:underline" target="_blank"
+                            <a class="" target="_blank"
                                href='https://tiana.computer/'>Tiana</a>.
                         </p>
+                        <span class="mt-2 font-bold">Some projects</span>
+                        <ul>
+                            <li>
+                                <img src="assets/icons/moreno.png" alt="" class="w-[15px] inline mr-1"> Un día como
+                                hoy... ·
+                                <span
+                                      class="opacity-30">Family album anniversaries</span>
+                            </li>
+                            <li><img src="assets/icons/memoire.png" alt="" class="w-[15px] inline mr-1"><a
+                                   class="cursor-pointer hover:underline"
+                                   href="https://thewebwewant.online" target="_blank">The Web We Want</a> ·
+                                <span
+                                      class="opacity-30">My
+                                    master
+                                    writing about handmade web</span>
+                            </li>
+                            <li><img src="assets/icons/map.png" alt="" class="w-[15px] inline mr-1"><a
+                                   class="cursor-pointer hover:underline"
+                                   href="https://a-map-of-inter.net" target="_blank">A map of Internet</a> · <span
+                                      class="opacity-30">A way to discover my favorties websites</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
             </div>
 
-            <!------------ DONWSTAIRS ------------>
-            <div>
-                <!------------ LAST PROJECTS ------------>
-                <div class="mt-4 text-sm">
-                    <ul>
-                        <li>
-                            <img src="assets/icons/moreno.png" alt="" class="w-[15px] inline mr-1"> Un día como hoy... ·
-                            <span
-                                  class="opacity-30">Family album anniversaries</span>
-                        </li>
-                        <li><img src="assets/icons/memoire.png" alt="" class="w-[15px] inline mr-1"><a
-                               class="cursor-pointer hover:underline"
-                               href="https://thewebwewant.online" target="_blank">The Web We Want ↗</a> ·
-                            <span
-                                  class="opacity-30">My
-                                master
-                                writing about handmade web</span>
-                        </li>
-                        <li><img src="assets/icons/map.png" alt="" class="w-[15px] inline mr-1"><a
-                               class="cursor-pointer hover:underline"
-                               href="https://a-map-of-inter.net" target="_blank">A map of Internet ↗</a> · <span
-                                  class="opacity-30">A way to discover my favorties websites</span>
-                        </li>
-                    </ul>
+            <!------------ FOOTER ------------>
+            <div class="flex sticky bottom-0 justify-between py-4 mt-4 text-xs bg-special-white md:flex-row">
 
+                <div class="flex gap-2">
+                    <a href="downloads/PMORENO-CV.pdf"
+                       class="flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md cursor-pointer hover:bg-[green] hover:no-underline transition-all duration-300 hover:text-white"
+                       target="_blank">CV</a>
+
+                    <script
+                            type="text/javascript">var email = "pablomoreno", domain = "proton.me", text = "E-mail"; document.write("<a href=javascript:location='" + "mail" + "to:" + email + "@" + domain + "' class='flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md cursor-pointer hover:bg-[red] hover:no-underline transition-all duration-300 hover:text-white'>" + text + "</a>");</script>
+
+                    <a href="https://www.are.na/pablo-moreno/"
+                       class="flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md cursor-pointer hover:bg-[blue] hover:no-underline transition-all duration-300 hover:text-white"
+                       target="_blank">Are.na</a>
                 </div>
 
-                <!------------ FOOTER ------------>
-                <div
-                     class="flex justify-between mt-4 text-xs md:flex-row">
-
-                    <div class="flex gap-2">
-                        <a href="downloads/PMORENO-CV.pdf"
-                           class="flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md hover:underline"
-                           target="_blank">CV</a>
-
-                        <script
-                                type="text/javascript">var email = "pablomoreno", domain = "proton.me", text = "E-mail"; document.write("<a href=javascript:location='" + "mail" + "to:" + email + "@" + domain + "' class='flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md hover:underline'>" + text + "</a>");</script>
-
-                        <a href="https://www.are.na/pablo-moreno/"
-                           class="flex items-center px-2 py-1 text-black bg-black bg-opacity-10 rounded-md hover:underline"
-                           target="_blank">Are.na</a>
-                    </div>
-
-                    <select
-                            class="px-2 py-1 rounded-md cursor-pointer w-[45px] bg-black bg-opacity-10">
-                        <option data-url="index.html" selected="">v.9</option>
-                        <option data-url="web-archive/v8-under-plus/frame.html">v.8 (under+)</option>
-                        <option data-url="web-archive/v7-under/frame.html">v.7 (under)</option>
-                        <option data-url="web-archive/v6-23/frame.html">v.6 (23%)</option>
-                        <option data-url="web-archive/v5-threecolors/frame.html">v.5 (threecolors)</option>
-                        <option data-url="web-archive/v4-dark/frame.html">v.4 (dark)</option>
-                        <option data-url="web-archive/v3-sidelist/frame.html">v.3 (sidelist)</option>
-                        <option data-url="web-archive/v2-billboard2/frame.html">v.2 (billboard2)</option>
-                        <option data-url="web-archive/v1-billboard/frame.html">v.1 (billboard)</option>
-                    </select>
-
-                </div>
-
+                <select
+                        class="px-2 py-1 rounded-md cursor-pointer w-[45px] bg-black bg-opacity-10 hover:bg-opacity-100 hover:no-underline transition-all duration-300 hover:text-white">
+                    <option data-url="index.html" selected="">v.9</option>
+                    <option data-url="web-archive/v8-under-plus/frame.html">v.8 (under+)</option>
+                    <option data-url="web-archive/v7-under/frame.html">v.7 (under)</option>
+                    <option data-url="web-archive/v6-23/frame.html">v.6 (23%)</option>
+                    <option data-url="web-archive/v5-threecolors/frame.html">v.5 (threecolors)</option>
+                    <option data-url="web-archive/v4-dark/frame.html">v.4 (dark)</option>
+                    <option data-url="web-archive/v3-sidelist/frame.html">v.3 (sidelist)</option>
+                    <option data-url="web-archive/v2-billboard2/frame.html">v.2 (billboard2)</option>
+                    <option data-url="web-archive/v1-billboard/frame.html">v.1 (billboard)</option>
+                </select>
             </div>
 
         </div>
@@ -190,25 +189,25 @@
         <!------------ 🎥 VIDEOS ------------>
 
         <div id="videoPanel"
-             class="flex overflow-hidden relative justify-center items-center bg-black md:w-1/2 h-auto md:h-auto aspect-[1.3] md:aspect-auto m-4 mb-0 md:m-0 rounded-xl md:rounded-none">
+             class="flex overflow-hidden relative justify-center items-center bg-black md:w-1/2 h-auto md:h-auto aspect-[1.3] md:aspect-auto m-4 mb-0 md:m-0 rounded-xl md:rounded-none transition-all duration-500">
 
             <div id="playButton"
-                 class="absolute bottom-4 z-30 w-full text-sm text-center text-yellow-300 md:text-base">
+                 class="absolute z-30 w-full text-center text-yellow-300 md:text-base">
                 <span id="studioAd"
-                      class="p-2 cursor-pointer textStroke hover:underline">(if
-                    you are a design studio, please click here!)</span>
+                      class="p-2 text-sm cursor-pointer textStroke hover:underline">(if
+                    you are a web design studio in Rotterdam, please click here!)</span>
                 <span id="subtitles"
-                      class="hidden p-2 textStroke">paying...</span>
+                      class="hidden p-2 text-lg textStroke">paying...</span>
             </div>
 
             <video id="videoWaiting" playsinline autoplay muted controls loop
-                   class="object-fill absolute z-20 w-full transition-all duration-500">
+                   class="object-cover absolute z-20 w-full h-full transition-all duration-500">
                 <source type="video/webm" src="media/videos/waiting.webm" />
                 <source type="video/mp4" src="media/videos/waiting.mp4" />
             </video>
 
             <video id="videoPresenting" playsinline
-                   class="object-fill absolute z-10 w-full transition-all duration-[.8s]">
+                   class="object-cover absolute z-10 w-full h-full transition-all duration-[.8s]">
                 <source type="video/webm" src="media/videos/presenting.webm" />
                 <source type="video/mp4" src="media/videos/presenting.mp4" />
             </video>
