--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                       class="p-2 text-sm cursor-pointer textStroke hover:underline">(if
                     you are a web design studio in Rotterdam, please click here!)</span>
                 <span id="subtitles"
-                      class="hidden p-2 text-lg textStroke">paying...</span>
+                      class="hidden p-2 text-sm md:text-lg textStroke unselectable">paying...</span>
             </div>
 
             <video id="videoWaiting" playsinline autoplay muted controls loop
