--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <!------------ MORE INFO ------------>
 
-                <div id="infoText" class="max-w-xl text-lg">
+                <div id="infoText" class="max-w-xl text-lg pb-[80px]">
                     <div class="relative">
 
                         <p class="mb-2">...who's creative in all
@@ -75,7 +75,7 @@
                     </div>
 
                     <div id="moreInfo"
-                         class="hidden pb-20 opacity-0 transition-all md:pb-8"
+                         class="hidden opacity-0 transition-all"
                          data-state="close">
                         <span class="mt-2 font-bold">Daily life</span>
                         <p class="mb-2">I live in <a
@@ -204,14 +204,14 @@
             </div>
 
             <video id="videoWaiting" playsinline autoplay muted controls loop
-                   class="object-cover absolute z-20 w-full h-full transition-all duration-500"
+                   class="object-cover absolute z-20 w-full h-full rounded-xl transition-all duration-500"
                    poster="media/videos/poster.jpg">
                 <source type="video/webm" src="media/videos/waiting.webm" />
                 <source type="video/mp4" src="media/videos/waiting.mp4" />
             </video>
 
             <video id="videoPresenting" playsinline
-                   class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s]">
+                   class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s] rounded-xl">
                 <source type="video/webm" src="media/videos/presenting.webm" />
                 <source type="video/mp4" src="media/videos/presenting.mp4" />
             </video>
